--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,17 @@
-<div class="container-fluid container-fluid-custom"><h1>Hello World!!</h1></div>
+<div class="container-fluid container-fluid-custom py-md-5 mb-5">
+  <main>
+    <div class="row py-md-5 text-center justify-content-center">
+      <div class="col-md-12 col-lg-6 mb-6 mb-md-0">
+        <h1 class="display-2 fw-bold mb-4 position-relative home-title">
+          Write Your Thoughts down as they come to you.
+        </h1>
+        <p class="fs-4 mb-4">
+          Notes is a simple app made with Node.js, EJS & MongoDB
+        </p>
+        <a href="/auth/google" class="btn btn-primary btn-lg"
+          >Try Notes It's Free</a
+        >
+      </div>
+    </div>
+  </main>
+</div>
